--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,10 +86,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  #fonts:
-  #  - family: Roboto
-  #    fonts:
-  #      - asset: assets/fonts/Roboto-Regular.ttf
+  fonts:
+    - family: Inspiration
+      fonts:
+       - asset: assets/fonts/Inspiration-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
