testing for edilclima first feedback done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
-    - assets/gameBoardPng/
+    - assets/gameBoardPng/Casa/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
